--- a/templates/Pod_Config.j2
+++ b/templates/Pod_Config.j2
@@ -61,6 +61,7 @@ Deploy:
     IPv4: {{ Deploy.Setting.IPv4 }}
     IPv6: {{ Deploy.Setting.IPv6 }}
     UseNFS: {{ Deploy.Setting.UseNFS }}
+    UsevSAN: {{ Deploy.Setting.UsevSAN }}
     UseDNS: {{ Deploy.Setting.UseDNS }}
     EnableSSH: {{ Deploy.Setting.EnableSSH }}
   Software:
