replace do with set, some ansible environment might not have jinja "do" extension installed

--- a/templates/vars_License_ESXi.j2
+++ b/templates/vars_License_ESXi.j2
@@ -29,7 +29,7 @@
 {% set ns.LicenseAssignedToHost = true %}
 {# License assigned, so reduce available license count by socket number consumed by host #}
 {% set NewQuantity = License.Quantity - HostSockets %}
-{% do License.update({'Quantity': NewQuantity}) %}
+{% set _ = License.update({'Quantity': NewQuantity}) %}
 {% endif %}{# HostSockets #}
 {% endfor %}{# Licenses #}
 {% endfor %}{# Hosts #}
